--- a/flexbox.css
+++ b/flexbox.css
@@ -2,6 +2,12 @@
 
 * {
   box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+}
+
+body {
+  font-family: Lato, sans-serif;
 }
 
 header {
@@ -69,5 +75,30 @@ button {
 button:hover {
   opacity: 0.9;
   background-color: rgb(79, 76, 76);
+  color: #fff;
+}
+
+ul {
+  list-style-type: none;
+  cursor: pointer;
+}
+
+li {
+  padding: 10px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0px 5px;
+}
+
+footer {
+  background-color: rgb(44, 95, 75);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 20px;
+  padding: 20px 30px;
   color: #fff;
 }
