--- a/navbar.css
+++ b/navbar.css
@@ -1,79 +1,96 @@
   @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 
-  * {
-    box-sizing: border-box;
-  }
+* {
+  box-sizing: border-box;
+}
 
-  body {
-    padding: 0px;
-    margin: 0px;
-    font-family: Lato;
-  }
+body {
+  padding: 0px;
+  margin: 0px;
+  font-family: Lato;
+}
 
-  header {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    align-items: center;
-    background-color: gainsboro;
-    padding: 0px;
-    color: #333;
-  }
+header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
+  background-color: gainsboro;
+  padding: 0px;
+  color: #333;
+}
 
-  header nav ul {
-    display: flex;
-  }
+header nav ul {
+  display: flex;
+}
 
-  nav ul {
-    list-style-type: none;
-    font-size: large;
-  }
+nav ul {
+  list-style-type: none;
+  font-size: large;
+}
 
-  a {
-    color: #333;
-    text-decoration: none;
-    padding: 17px;
-  }
+a {
+  color: #333;
+  text-decoration: none;
+  padding: 17px;
+}
 
-  nav a:hover,
-  nav a.active {
-    background: rgb(234, 233, 233);
-    color: #333;
-  }
+header nav a:hover, aside nav a:hover,
+header nav a.active, aside nav a:active {
+  background: rgb(234, 233, 233);
+  color: #333;
+}
 
-  .hamburg img {
-    height: 25px;
-    width: 25px;
-    display: none;
-  }
+.hamburg img {
+  height: 25px;
+  width: 25px;
+  display: none;
+}
 
-  #toggle {
-    display: none;
-  }
+#toggle {
+  display: none;
+}
 
-  .main {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    gap: 15px;
-  }
+.main {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+}
 
-  aside {
-    background-color: lightgray;
-    position: sticky;
-    top: 0;
-    height: 300px;
-    border-radius: 4px;
-  }
+aside {
+  background-color: lightgray;
+  position: sticky;
+  top: 0;
+  border-radius: 4px;
+}
 
-  aside nav ul li {
-    padding: 20px;
-  }
-    
-  main {
-    padding: 0px 15px;
-    margin-right: 10px;
-    border: 0.5px solid rgb(230, 227, 227);
-  }
+aside nav ul li {
+  padding: 20px;
+}
+  
+main {
+  padding: 0px 15px;
+  margin-right: 10px;
+  border: 0.5px solid rgb(230, 227, 227);
+}
+
+footer li {
+  padding: 10px;
+}
+
+footer a {
+  color: #fff;
+  margin: 0px 5px;
+}
+
+footer {
+  background-color: rgb(44, 95, 75);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 20px;
+  padding: 20px 30px;
+  color: #fff;
+}
 
   @media(max-width: 768px) {
     header {
