--- a/productcard.css
+++ b/productcard.css
@@ -69,6 +69,7 @@ button:hover {
 
 li {
   padding: 10px;
+  list-style-type: none;
 }
 
 a {
@@ -82,6 +83,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  height: 160px;
   margin-top: 20px;
   padding: 20px 30px;
   color: #fff;
